Bug 331705 - Kopete incorrectly places elements in transport registration window
Summary: Kopete incorrectly places elements in transport registration window
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: Jabber Plugin (other bugs)
Version First Reported In: 1.6.2
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Kopete Developers
URL: http://simpleapps.ru/shot.png
Keywords:
: 336065 336965 341634 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-03-03 14:54 UTC by mrDoctorWho
Modified: 2016-03-25 13:02 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 16.04
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description mrDoctorWho 2014-03-03 14:54:55 UTC
When opening transport register form Kopete shows all window elements in one place.  It makes registration on transports unavailable.

Reproducible: Always

Steps to Reproduce:
1. Open service discovery window
2. For example, discover services on server jabberik.ru
3. Choosing transport (for example) vk.jabberik.ru, then press "register"
Actual Results:  
See how it looks in screenshot http://simpleapps.ru/shot.png

Expected Results:  
Screenshot of oldest kopete version: http://xmppserv.ru/img/kopete/4.png
Comment 1 Roman 2014-08-03 15:01:10 UTC
*** Bug 336965 has been marked as a duplicate of this bug. ***
Comment 3 Pali Rohár 2015-01-24 10:51:04 UTC
*** Bug 341634 has been marked as a duplicate of this bug. ***
Comment 4 Pali Rohár 2015-03-15 13:43:48 UTC
*** Bug 336065 has been marked as a duplicate of this bug. ***
Comment 5 Pali Rohár 2015-03-15 13:44:10 UTC
There is problem with layout in file protocols/jabber/ui/dlgregister.cpp
Comment 6 Paulo Lieuthier 2016-03-13 01:06:43 UTC
Proposed fix: https://git.reviewboard.kde.org/r/127357/.
Comment 7 Pali Rohár 2016-03-25 13:02:27 UTC
Git commit 46cfb747a6024baaea8f67d403ae7eb9ef0cda74 by Pali Rohár, on behalf of Paulo Lieuthier.
Committed on 25/03/2016 at 11:09.
Pushed by pali into branch 'Applications/16.04'.

Fix layout bugs in Jabber's service registration dialogs
FIXED-IN: 16.04

M  +3    -2    protocols/jabber/jabberformtranslator.cpp
M  +3    -2    protocols/jabber/jabberxdatawidget.cpp

http://commits.kde.org/kopete/46cfb747a6024baaea8f67d403ae7eb9ef0cda74