Fix layout bugs in Jabber's service registration dialogs

BUG: 331705
FIXED-IN: 16.04